@@ -1,4 +1,5 @@
 - stop configuring TV cards in summary since kernel do a better job now
+- fix passing module options when module name contains a '-' character
 
 Version 10.4.204 - 19 September 2007, by Pascal "Pixel" Rigaux
 
